# imglife

./: .gitignore  .travis.yml  Cargo.toml  Justfile  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: cell.rs  codec.rs  game.rs  main.rs
